fix wrap problem

--- a/css/bubble.css
+++ b/css/bubble.css
@@ -1,14 +1,13 @@
 #floatingSubmenu {
 	position: absolute;
-	width: auto;
 	height: 61px;
 	z-index: 2;
 	left: 274px;
 	top: 164px;
 	font-size: 12px;
 	font-weight: normal;
-	min-width: 500px;
 	display: none;
+	white-space: nowrap;
 }
 #bubbleLeft {
 	position: relative;
@@ -17,7 +16,7 @@
 	background-repeat: no-repeat;
 	height: 61px;
 	width: 54px;
-	float: left;
+	display: inline-block;
 }
 #bubbleMiddle {
 	position: relative;
@@ -25,7 +24,8 @@
 	background-image: url(../images/bubble_button_02.png);
 	background-repeat: repeat-x;
 	height: 61px;
-	float: left;
+	display: inline-block;
+	margin-left: -4px;
 }
 #bubbleRight {
 	position: relative;
@@ -34,23 +34,25 @@
 	background-repeat: no-repeat;
 	height: 61px;
 	width: 14px;
-	float: left;
+	display: inline-block;
+	margin-left: -4px;
 }
 #floatingSubmenuContent {
 	position: relative;
-	width: auto;
 	height: auto;
 	z-index: 1;
 	left: -30px;
 	top: 25px;
-  margin-right: -30px;
+    margin-right: -30px;
 	font-size: 12px;
 	color: #FFF;
 }
 .floatingUl {
 	list-style: none;
-  margin: 0px;
-  padding: 0px;
+	margin: 0px;
+	padding: 0px;
+	display: none;
+
 }
 .floatingUl li {
 	float: left;
@@ -58,14 +60,13 @@
 	margin-right: 10px;
 }
 .floatingUl li:not(:last-child):after {
-  margin-left: 5px;
-  content: " | ";
+	margin-left: 5px;
+	content: " |";
 }
 .floatingUl li a {
 	text-decoration: none;
 	color: #FFF;
 }
-.floatingUl li a:hover
-{ 
+.floatingUl li a:hover {
   color: yellow;
 }
