--- a/css/humble.css
+++ b/css/humble.css
@@ -41,9 +41,10 @@
 	z-index: 1;
 	background-image: url(../images/h_02.png);
 	background-repeat: repeat-y;
-  height: auto;
+    height: auto;
 	text-align: left;
 	overflow: hidden;
+	min-height: 144px;
 }
 #humblerH3 {
 	position: relative;
